<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView_edit"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="5sp"
        android:src="@drawable/album"/>

    <TextView
        android:id="@+id/name_edit"
        android:layout_width="185sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:singleLine="true"
        android:layout_toEndOf="@id/imageView_edit"
        android:text="@string/nameofstation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/description_edit"
        android:layout_width="185sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit"
        android:layout_toEndOf="@+id/imageView_edit"
        android:layout_marginStart="5sp"
        android:singleLine="true"
        android:text="@string/stationdescription"
        android:textSize="17sp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/type_edit"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_below="@id/name_edit"
        android:layout_marginStart="10sp"
        android:layout_marginTop="-10sp"
        android:layout_toLeftOf="@id/imageView_trash"
        android:layout_toEndOf="@id/description_edit"
        android:clickable="false"
        android:text="@string/type" />

    <ImageView
        android:id="@+id/imageView_trash"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentEnd="true"
        android:scaleX="0.65"
        android:scaleY="0.65"
        android:src="@drawable/outline_delete_black_48dp" />




</RelativeLayout>