<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60sp"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:layout_marginTop="4sp"
        android:id="@+id/imageView"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="5sp"
        android:transitionName="transition1"
        android:src="@drawable/album"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="185sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_toEndOf="@id/imageView"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:transitionName="transition"
        android:text="@string/nameofstation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/description"
        android:layout_width="185sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="5sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/stationdescription"
        android:textSize="17sp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_below="@id/name"
        android:layout_marginStart="10sp"
        android:layout_marginTop="-10sp"
        android:layout_toLeftOf="@id/checkBox"
        android:layout_toEndOf="@id/description"
        android:clickable="false"
        android:text="@string/type" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="50sp"
        android:layout_height="60sp"
        android:layout_alignParentEnd="true"
        android:scaleX="0.65"
        android:scaleY="0.65"
        android:button="@drawable/checkbox_selector" />


</RelativeLayout>